--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: backy
-author: GDur
+version: 0.1.0
+author: GDur<gdur.mugen@googlemail.com>
 description: "Backy is a neural network which is using the backpropagation algorithm.\r\
   \nI can be instanciated with any number of layer diemnsions. For example: [2, 3,\
   \ 1] which produces a net with 3 layers. The input layer has two inputs and the\
   \ output layer has 1 output neuron. The hidden layer has 3 neurons."
-dependencies:
-  browser: any
+homepage: http://pub.dartlang.org/
+documentation: https://github.com/GDur/backy
