- readme contains more explanation - attempt on serialization for the weights in backy in progress (not working yet) - adjusted learningrate and bias in sigmoidneuron - is able to learn - fixed major bug in trainer which hindered proper training
Signed-off-by: G A <gdur.mugen@googlemail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: backy
 version: 0.1.0
-author: GDur<gdur.mugen@googlemail.com>
+author: GDur <gdur.mugen@gmail.com>
 description: "Backy is a neural network which is using the backpropagation algorithm.\r\
   \nIt can be instanciated with any number of layer dimensions. For example: [2, 3,\
   \ 1] which produces a net with 3 layers. The input layer has two inputs and the\
